--- a/workflow/modules/qc/Snakefile
+++ b/workflow/modules/qc/Snakefile
@@ -25,13 +25,13 @@ rule check_fai:
 
 rule vcftools_individuals:
     input:
-        vcf = "results/{refGenome}/{prefix}_raw.vcf.gz"
+        vcf = "results/{prefix}_raw.vcf.gz"
     output:
-        depth = "results/{refGenome}/QC/{prefix}.idepth",
-        miss = "results/{refGenome}/QC/{prefix}.imiss",
-        samps = "results/{refGenome}/QC/{prefix}.samps.txt",
-        summ = "results/{refGenome}/QC/{prefix}.FILTER.summary",
-        het = "results/{refGenome}/QC/{prefix}.het"
+        depth = "results/QC/{prefix}.idepth",
+        miss = "results/QC/{prefix}.imiss",
+        samps = "results/QC/{prefix}.samps.txt",
+        summ = "results/QC/{prefix}.FILTER.summary",
+        het = "results/QC/{prefix}.het"
     conda:
         "envs/vcftools_individuals.yml"
     params:
@@ -48,17 +48,17 @@ rule vcftools_individuals:
 
 rule subsample_snps:
     input:
-        vcf = "results/{refGenome}/{prefix}_raw.vcf.gz",
-        samps = "results/{refGenome}/QC/{prefix}.samps.txt",
-        fai = "results/{refGenome}/data/genome/{refGenome}.fasta.fai",
-        sumstats = "results/{refGenome}/summary_stats/{prefix}_bam_sumstats.txt"
+        vcf = "results/{prefix}_raw.vcf.gz",
+        samps = "results/QC/{prefix}.samps.txt",
+        fai = "results/data/genome/{refGenome}.fasta.fai",
+        sumstats = "results/summary_stats/{prefix}_bam_sumstats.txt"
     output:
-        filtered = temp("results/{refGenome}/QC/{prefix}_filtered.vcf.gz"),
-        filtered_idx = temp("results/{refGenome}/QC/{prefix}_filtered.vcf.gz.csi"),
-        pruned = "results/{refGenome}/QC/{prefix}.pruned.vcf.gz",
-        snpqc = "results/{refGenome}/QC/{prefix}_snpqc.txt",
-        fai = "results/{refGenome}/QC/{prefix}.fna.fai",
-        sumstats = "results/{refGenome}/QC/{prefix}_bam_sumstats.txt"
+        filtered = temp("results/QC/{prefix}_filtered.vcf.gz"),
+        filtered_idx = temp("results/QC/{prefix}_filtered.vcf.gz.csi"),
+        pruned = "results/QC/{prefix}.pruned.vcf.gz",
+        snpqc = "results/QC/{prefix}_snpqc.txt",
+        fai = "results/QC/{prefix}.fna.fai",
+        sumstats = "results/QC/{prefix}_bam_sumstats.txt"
     conda:
         "envs/subsample_snps.yml"
     params:
@@ -99,18 +99,18 @@ rule plink:
     Call plink PCA.
     """
     input:
-        vcf = "results/{refGenome}/QC/{prefix}.pruned.vcf.gz",
-        faiResult = "results/{refGenome}/QC/{prefix}_fai_tmp.txt"        
+        vcf = "results/QC/{prefix}.pruned.vcf.gz",
+        faiResult = "results/QC/{prefix}_fai_tmp.txt"
     params:
         prefix = lambda wc, input: input.vcf.replace(".pruned.vcf.gz", "")
     output: 
-        bed = "results/{refGenome}/QC/{prefix}.bed",
-        bim = "results/{refGenome}/QC/{prefix}.bim",
-        fam = "results/{refGenome}/QC/{prefix}.fam",
-        eigenvec = "results/{refGenome}/QC/{prefix}.eigenvec",
-        eigenval = "results/{refGenome}/QC/{prefix}.eigenval",
-        dist = "results/{refGenome}/QC/{prefix}.dist",
-        distid = "results/{refGenome}/QC/{prefix}.dist.id",
+        bed = "results/QC/{prefix}.bed",
+        bim = "results/QC/{prefix}.bim",
+        fam = "results/QC/{prefix}.fam",
+        eigenvec = "results/QC/{prefix}.eigenvec",
+        eigenval = "results/QC/{prefix}.eigenval",
+        dist = "results/QC/{prefix}.dist",
+        distid = "results/QC/{prefix}.dist.id",
         king = "results/{refGenome}/QC/{prefix}.king"
     conda:
         "envs/plink.yml"
