--- a/.test/trackhub/config/test_qc_gls_config.yaml
+++ b/.test/trackhub/config/test_qc_gls_config.yaml
@@ -46,7 +46,7 @@ nClusters: 3
 # These variables control the output of the fastq2bam workflow. You don't need to change these, but if you do please have a forward slash follow name!
 ##############################
 
-output: "results/"
+output: "results/{ref_name}/"
 fastqDir: "data/fastq/"                           # this is where raw fastqs are downloaded
 refGenomeDir: "data/genome/"                      # where reference genomes go
 fastq2bamDir: "fastq2bam/"
