--- a/profiles/slurm/cluster_config.yml
+++ b/profiles/slurm/cluster_config.yml
@@ -1,6 +1,6 @@
 __default__:
-    partition: "holy-cow,holy-smokes"
+    partition: "standard,rosalind"
     time: 9000
     nodes: 1
-    mem: 1000
+    mem: 10000
     output: "logs/slurm/slurm-%j.out"
