--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -8,15 +8,16 @@ include: "rules/fastq.smk"
 include: "rules/reference.smk"
 include: "rules/mappability.smk"
 
-#if config['sentieon']:
-    #include: "rules/sentieon.smk"
-#else:
-include: "rules/fastq2bam.smk"
-if config['intervals']:
-    include: "rules/bam2vcf_gatk_intervals.smk"
-    include: "rules/intervals.smk"
+if config['sentieon']:
+    include: "rules/sentieon.smk"
 else:
-    include: "rules/bam2vcf_gatk.smk"
+    include: "rules/fastq2bam.smk"
+    if config['intervals']:
+        include: "rules/bam2vcf_gatk_intervals.smk"
+        include: "rules/intervals.smk"
+    else:
+        include: "rules/bam2vcf_gatk.smk"
+
 
 if config['cov_filter']:
     include: "rules/cov_filter.smk"
